shared/src/commonMain/kotlin/com/example/osmapi/core/common/errors/OsmPreconditionFailedException.kt
package com.example.osmapi.core.common.errors

class OsmPreconditionFailedException:OsmApiException() {
}